--- a/collaboration.html
+++ b/collaboration.html
@@ -89,10 +89,10 @@
                             <a class="kingster-top-bar-right-button active-btn "
                                 href="collaboration.html">Collaboration</a>
                             <a class="kingster-top-bar-right-button" href="gallery.html">Gallery</a>
-                            <ul id="kingster-top-bar-menu"
+                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#"><img src="img/sa-flag.png"
-                                            width="35" alt=""></a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="index-ar.html"><img
+                                            src="img/sa-flag.png" width="35" alt=""></a></li>
                             </ul>
                         </div>
                     </div>
