--- a/fashion-management-design.html
+++ b/fashion-management-design.html
@@ -25,7 +25,8 @@
 <body
     class="home page-template-default page page-id-2039 gdlr-core-body woocommerce-no-js tribe-no-js kingster-body kingster-body-front kingster-full  kingster-with-sticky-navigation  kingster-blockquote-style-1 gdlr-core-link-to-lightbox">
     <div class="kingster-mobile-header-wrap">
-        <div class="kingster-mobile-header kingster-header-background kingster-style-slide kingster-sticky-mobile-navigation" id="kingster-mobile-header" style="display: block;">
+        <div class="kingster-mobile-header kingster-header-background kingster-style-slide kingster-sticky-mobile-navigation"
+            id="kingster-mobile-header" style="display: block;">
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
@@ -59,8 +60,10 @@
                                 <li class="menu-item"><a href="contact.html">Contact Us</a></li>
                                 <li class="menu-item menu-item-has-children"><a href="#">Language</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item webbox"><a href="index-ar.html">Arabic</a><img src="img/sa-flag.png" width="30" alt="" class="mrg16"></li>
-                                        <li class="menu-item webbox"><a href="index.html">English</a><img src="img/uk-flag.png" width="28" alt="" class="mrg17"></li>
+                                        <li class="menu-item webbox"><a href="index-ar.html">Arabic</a><img
+                                                src="img/sa-flag.png" width="30" alt="" class="mrg16"></li>
+                                        <li class="menu-item webbox"><a href="index.html">English</a><img
+                                                src="img/uk-flag.png" width="28" alt="" class="mrg17"></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -77,26 +80,20 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
-                                class="fa fa-phone"
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
+                                href="mailto:Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                                                       <a href="tel:+966552995509">+966 55 299 5509</a>
-                                </div>
+                            <a href="tel:+966552995509">+966 55 299 5509</a>
+                        </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
-                            <!-- <ul id="kingster-top-bar-menu"
-                                        class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                        <li class="menu-item kingster-normal-menu"><a href="#">Life In Riyadh</a></li>
-                                        <li class="menu-item kingster-normal-menu"><a href="collaboration.html">Collaboration</a></li>
-                                    </ul> -->
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh.html">Life In Riyadh</a>
                             <a class="kingster-top-bar-right-button " href="collaboration.html">Collaboration</a>
                             <a class="kingster-top-bar-right-button " href="gallery.html">Gallery</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#"><img
+                                <li class="menu-item kingster-normal-menu"><a href="index-ar.html"><img
                                             src="img/sa-flag.png" width="35" alt=""></a></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -315,7 +312,8 @@
                                                     List 2</a></li>
                                         </ul>
                                     </li> -->
-                                    <li class="menu-item kingster-normal-menu"><a href="scholarships.html">Scholarships</a>
+                                    <li class="menu-item kingster-normal-menu"><a
+                                            href="scholarships.html">Scholarships</a>
                                     </li>
                                     <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
                                         </a></li>
@@ -366,7 +364,8 @@
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                                 <div class="gdlr-core-pbf-column gdlr-core-column-20-fund gdlr-core-column-first">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js study-head2 heading3div">
+                                        <div
+                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js study-head2 heading3div">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top"
                                                     style="padding-bottom: 20px ;">
@@ -398,11 +397,14 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
-                                                    <div class="gdlr-core-text-box-item-content prg-width p-color pdiv1">
+                                                    <div
+                                                        class="gdlr-core-text-box-item-content prg-width p-color pdiv1">
                                                         <p>Fashion Marketing
-                                                            & Management Design is an exciting field that opens one up to countless
+                                                            & Management Design is an exciting field that opens one up
+                                                            to countless
                                                             opportunities in the fashion industry.
-                                                            Students learn buying and merchandising practices, along with
+                                                            Students learn buying and merchandising practices, along
+                                                            with
                                                             conceptualizing and developing
                                                             effective brand management strategies to execute advertising
                                                             and promotional activities.
@@ -459,8 +461,8 @@
                                                         • Buying Principles<br>
                                                         • Consumer Behavior<br>
                                                         • Academic Research &<br>
-                                                    &nbsp;&nbsp;Communication Skills
-                                                      
+                                                        &nbsp;&nbsp;Communication Skills
+
                                                     </p>
                                                 </div>
                                             </div>
@@ -540,47 +542,47 @@
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 2">
-                                            <p  class="text8">Costume Coordinator</p>
+                                            <p class="text8">Costume Coordinator</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 3">
-                                            <p  class="text8">Fashion Editor</p>
+                                            <p class="text8">Fashion Editor</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 4">
-                                            <p  class="text8">Fashion Coordinator</p>
+                                            <p class="text8">Fashion Coordinator</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 5">
-                                            <p  class="text8">Brand Manager</p>
+                                            <p class="text8">Brand Manager</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p  class="text8">Market Researcher</p>
+                                            <p class="text8">Market Researcher</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 7">
-                                            <p  class="text8">Visual Merchandiser</p>
+                                            <p class="text8">Visual Merchandiser</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 8">
-                                            <p  class="text8">Public Relations Officer</p>
+                                            <p class="text8">Public Relations Officer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 9">
-                                            <p  class="text8">Image Coordinator</p>
+                                            <p class="text8">Image Coordinator</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 10">
-                                            <p  class="text8">Image Consultant</p>
+                                            <p class="text8">Image Consultant</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 11">
-                                            <p  class="text8">Event Manager</p>
+                                            <p class="text8">Event Manager</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 12">
-                                            <p  class="text8">Merchandiser</p>
+                                            <p class="text8">Merchandiser</p>
                                         </div>
                                     </div>
 
@@ -598,9 +600,10 @@
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
-                                <input id="phone" type="number" name="phone" size="40" placeholder="Type your phone number"
-                                    aria-required="true" aria-invalid="false" required pattern="[+0-9\s]+">
-                                    
+                                <input id="phone" type="number" name="phone" size="40"
+                                    placeholder="Type your phone number" aria-required="true" aria-invalid="false"
+                                    required pattern="[+0-9\s]+">
+
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
                             </form>
                         </div>
@@ -635,8 +638,10 @@
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
-                                        <li class="menu-item"><a href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
+                                        <li class="menu-item"><a
+                                                href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
+                                        <li class="menu-item"><a
+                                                href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -662,7 +667,9 @@
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office No.25, Home Offices,
+                                        <li class="menu-item"><a
+                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office
+                                                No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
                                                 Riyadh, Saudi Arabia</a></li>
                                     </ul>
@@ -675,8 +682,8 @@
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
                         <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue.
-                                    All
-                                    Rights Reserved</div>
+                            All
+                            Rights Reserved</div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                 style="padding-bottom: 0px ;">
