--- a/admission.html
+++ b/admission.html
@@ -95,10 +95,10 @@
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh.html">Life In Riyadh</a>
                             <a class="kingster-top-bar-right-button " href="collaboration.html">Collaboration</a>
                             <a class="kingster-top-bar-right-button " href="gallery.html">Gallery</a>
-                            <ul id="kingster-top-bar-menu"
+                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#"><img src="img/sa-flag.png"
-                                            width="35" alt=""></a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="index-ar.html"><img
+                                            src="img/sa-flag.png" width="35" alt=""></a></li>
                             </ul>
                         </div>
                     </div>
