--- a/foundation-studies.html
+++ b/foundation-studies.html
@@ -25,7 +25,8 @@
 <body
     class="home page-template-default page page-id-2039 gdlr-core-body woocommerce-no-js tribe-no-js kingster-body kingster-body-front kingster-full  kingster-with-sticky-navigation  kingster-blockquote-style-1 gdlr-core-link-to-lightbox">
     <div class="kingster-mobile-header-wrap">
-        <div class="kingster-mobile-header kingster-header-background kingster-style-slide kingster-sticky-mobile-navigation" id="kingster-mobile-header" style="display: block;">
+        <div class="kingster-mobile-header kingster-header-background kingster-style-slide kingster-sticky-mobile-navigation"
+            id="kingster-mobile-header" style="display: block;">
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
@@ -59,8 +60,10 @@
                                 <li class="menu-item"><a href="contact.html">Contact Us</a></li>
                                 <li class="menu-item menu-item-has-children"><a href="#">Language</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item webbox"><a href="index-ar.html">Arabic</a><img src="img/sa-flag.png" width="30" alt="" class="mrg16"></li>
-                                        <li class="menu-item webbox"><a href="index.html">English</a><img src="img/uk-flag.png" width="28" alt="" class="mrg17"></li>
+                                        <li class="menu-item webbox"><a href="index-ar.html">Arabic</a><img
+                                                src="img/sa-flag.png" width="30" alt="" class="mrg16"></li>
+                                        <li class="menu-item webbox"><a href="index.html">English</a><img
+                                                src="img/uk-flag.png" width="28" alt="" class="mrg17"></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -77,26 +80,20 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
-                                class="fa fa-phone"
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
+                                href="mailto:Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                                                       <a href="tel:+966552995509">+966 55 299 5509</a>
-                                </div>
+                            <a href="tel:+966552995509">+966 55 299 5509</a>
+                        </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
-                            <!-- <ul id="kingster-top-bar-menu"
-                                        class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                        <li class="menu-item kingster-normal-menu"><a href="#">Life In Riyadh</a></li>
-                                        <li class="menu-item kingster-normal-menu"><a href="collaboration.html">Collaboration</a></li>
-                                    </ul> -->
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh.html">Life In Riyadh</a>
                             <a class="kingster-top-bar-right-button " href="collaboration.html">Collaboration</a>
                             <a class="kingster-top-bar-right-button " href="gallery.html">Gallery</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#"><img
+                                <li class="menu-item kingster-normal-menu"><a href="index-ar.html"><img
                                             src="img/sa-flag.png" width="35" alt=""></a></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -315,7 +312,8 @@
                                                     List 2</a></li>
                                         </ul>
                                     </li> -->
-                                    <li class="menu-item kingster-normal-menu"><a href="scholarships.html">Scholarships</a>
+                                    <li class="menu-item kingster-normal-menu"><a
+                                            href="scholarships.html">Scholarships</a>
                                     </li>
                                     <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
                                         </a></li>
@@ -396,7 +394,8 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
-                                                    <div class="gdlr-core-text-box-item-content prg-width p-color mrg-lft pdiv1">
+                                                    <div
+                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft pdiv1">
                                                         <p>The aim of the Design Foundation program is to prepare the
                                                             new students before
                                                             they enter their specialized diploma with a solid foundation
@@ -438,8 +437,8 @@
                                             <div
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="img/foundation/learning-study.jpg"
-                                                            width="900" height="500" alt="" /></a>
+                                                    <a href="#"><img src="img/foundation/learning-study.jpg" width="900"
+                                                            height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
                                                     <h3 class="gdlr-core-event-item-title titles-css title6"><a
@@ -458,8 +457,8 @@
                                             <div
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-studies gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="img/foundation/drawing.jpg"
-                                                            width="900" height="500" alt="" /></a>
+                                                    <a href="#"><img src="img/foundation/drawing.jpg" width="900"
+                                                            height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
                                                     <h3 class="gdlr-core-event-item-title titles-css title6"><a
@@ -479,11 +478,12 @@
                                             <div
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="img/foundation/art-history.jpg"
-                                                            width="900" height="500" alt="" /></a>
+                                                    <a href="#"><img src="img/foundation/art-history.jpg" width="900"
+                                                            height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css title6"><a href="#">Art
+                                                    <h3 class="gdlr-core-event-item-title titles-css title6"><a
+                                                            href="#">Art
                                                             History</a></h3>
                                                     <p class="font-css text4">
                                                         The objective of this module is to introduce
@@ -499,8 +499,8 @@
                                             <div
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-studies gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="img/foundation/Mathematics.jpg"
-                                                            width="900" height="500" alt="" /></a>
+                                                    <a href="#"><img src="img/foundation/Mathematics.jpg" width="900"
+                                                            height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
                                                     <h3 class="gdlr-core-event-item-title titles-css title6"><a
@@ -530,9 +530,10 @@
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
-                                <input id="phone" type="number" name="phone" size="40" placeholder="Type your phone number"
-                                    aria-required="true" aria-invalid="false" required pattern="[+0-9\s]+">
-                                    
+                                <input id="phone" type="number" name="phone" size="40"
+                                    placeholder="Type your phone number" aria-required="true" aria-invalid="false"
+                                    required pattern="[+0-9\s]+">
+
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
                             </form>
                         </div>
@@ -566,8 +567,10 @@
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
-                                        <li class="menu-item"><a href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
+                                        <li class="menu-item"><a
+                                                href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
+                                        <li class="menu-item"><a
+                                                href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -593,7 +596,9 @@
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office No.25, Home Offices,
+                                        <li class="menu-item"><a
+                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office
+                                                No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
                                                 Riyadh, Saudi Arabia</a></li>
                                     </ul>
@@ -606,8 +611,8 @@
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
                         <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue.
-                                    All
-                                    Rights Reserved</div>
+                            All
+                            Rights Reserved</div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                 style="padding-bottom: 0px ;">
