--- a/interior-design.html
+++ b/interior-design.html
@@ -149,7 +149,7 @@
                     <div class="gdlr-core-pbf-wrapper " style="padding: 600px 0px 60px 0px;" id="gdlr-core-wrapper-1">
                         <div class="gdlr-core-pbf-background-wrap">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-image: url(img/Interior/Slider.png) ;background-size: cover ;background-position: center ;"
+                                style="background-image: url(img/Interior/Slider.webp) ;background-size: cover ;background-position: center ;"
                                 data-parallax-speed="0"></div>
                         </div>
                         <div class="gdlr-core-page-builder-wrapper-bottom-gradient"
