--- a/lifeinriyadh-ar.html
+++ b/lifeinriyadh-ar.html
@@ -296,7 +296,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/lifeinriyadh/1-06.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/lifeinriyadh/1-06.webp) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
