--- a/scholarships.html
+++ b/scholarships.html
@@ -160,7 +160,7 @@
         <div class="kingster-page-wrapper" id="kingster-page-wrapper">
             <div class="gdlr-core-page-builder-body">
                 <div class="gdlr-core-pbf-section"
-                    style="background-image: url(img/scholarships-bg.jpg);background-repeat: no-repeat;background-size: cover;height: 1675px;">
+                    style="background-image: url(img/scholarships-bg.webp);background-repeat: no-repeat;background-size: cover;height: 1675px;">
                     <div class="gdlr-core-pbf-section-container gdlr-core-container clearfix">
                         <div class="gdlr-core-pbf-element">
                             <div class="gdlr-core-blog-item gdlr-core-item-pdb clearfix  gdlr-core-style-blog-image"
