--- a/visual-communication.html
+++ b/visual-communication.html
@@ -280,7 +280,7 @@
                                                                 <div
                                                                     class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                                                     <div class="gdlr-core-pbf-element vis-img-size">
-                                                                        <img src="img/Visual-img.png" alt=""
+                                                                        <img src="img/Visual-img.webp" alt=""
                                                                             class="vision-img">
                                                                     </div>
                                                                 </div>
