--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
                     <div class="gdlr-core-pbf-wrapper " style="padding: 250px 0px 160px 0px;">
                         <div class="gdlr-core-pbf-background-wrap">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-image: url(img/Contact\ us-02.png) ;background-size: cover ;background-position: center ;"
+                                style="background-image: url(img/Contactus-02.webp) ;background-size: cover ;background-position: center ;"
                                 data-parallax-speed="0.3"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js " data-gdlr-animation="fadeInUp"
