--- a/fashion-design-ar.html
+++ b/fashion-design-ar.html
@@ -159,7 +159,7 @@
                     <div class="gdlr-core-pbf-wrapper " style="padding: 600px 0px 60px 0px;" id="gdlr-core-wrapper-1">
                         <div class="gdlr-core-pbf-background-wrap">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-image: url(img/fashion-design/slider.jpg) ;background-size: cover ;background-position: center ;"
+                                style="background-image: url(img/fashion-design/slider.webp) ;background-size: cover ;background-position: center ;"
                                 data-parallax-speed="0"></div>
                         </div>
                         <div class="gdlr-core-page-builder-wrapper-bottom-gradient"
