--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/44.png"
+                                                        data-param10="" data-description=""> <img src="img/44.webp"
                                                             alt="" title="slider-hp2-2" width="1800" height="958"
                                                             data-bgposition="center center" data-bgfit="cover"
                                                             data-bgrepeat="no-repeat" class="rev-slidebg"
@@ -221,7 +221,7 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/13-02.png"
+                                                        data-param10="" data-description=""> <img src="img/13-02.webp"
                                                             alt="" title="slider-hp2-2" width="1800" height="958"
                                                             data-bgposition="center center" data-bgfit="cover"
                                                             data-bgrepeat="no-repeat" class="rev-slidebg"
@@ -380,7 +380,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-with-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 20px;"><img src="img/icon 5-05.png" alt=""
+                                                        style="margin-bottom: 20px;"><img src="img/icon 3-03.png" alt=""
                                                             width="49" height="45" title="hp2-col-2-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -756,8 +756,7 @@
                     <div class="gdlr-core-pbf-wrapper pad1" style="padding: 90px 0px 55px 0px;"
                         data-skin="Column White">
                         <div class="gdlr-core-pbf-background-wrap"
-                            style="background-image:url(img/9-01.png) ;background-repeat: no-repeat;background-size: cover;">
-                            <!-- <div class="overlay2"></div> -->
+                            style="background-image:url(img/9-01.webp) ;background-repeat: no-repeat;background-size: cover;">
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
