--- a/admission-ar.html
+++ b/admission-ar.html
@@ -254,7 +254,7 @@
                                                         </p>
                                                         <p>
                                                             <span class="wpcf7-form-control-wrap nationality-dropdown">
-                                                                <select name="الجنسية"
+                                                                <select name="nationality-ar"
                                                                     class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false">
                                                                     <option value="Select Nationality*">يختار
