--- a/programs-ar.html
+++ b/programs-ar.html
@@ -282,7 +282,7 @@
                 <div class="subscribe-box">
                         <div class="inner wow fadeIn">
                             <h2 class="text3-ar">تواصل معنا الآن<br>
-                                ! لنرى كيف يمكننا مساعدتك 
+                                 لنرى كيف يمكننا مساعدتك 
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input id="phone" type="number" name="phone" size="40" dir="rtl"
