--- a/scholarships-ar.html
+++ b/scholarships-ar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar"  class="no-js">
+<html lang="ar" class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -41,8 +41,7 @@
                         <div class="kingster-mm-menu-wrap kingster-navigation-font ar-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home text-ar1"><a
-                                        href="index-ar.html">الرئيسية</a>
+                                <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
                                 <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
@@ -53,7 +52,8 @@
                                 <li class="menu-item"><a href="programs-ar.html" class="text-ar1">البرامج</a>
                                 </li>
 
-                                <li class="menu-item current-menu-item"><a href="scholarships-ar.html" class="text-ar1">المنح الدراسية</a>
+                                <li class="menu-item current-menu-item"><a href="scholarships-ar.html"
+                                        class="text-ar1">المنح الدراسية</a>
                                 </li>
                                 <li class="menu-item"><a href="admission-ar.html" class="text-ar1">تسجيل</a></li>
                                 <li class="menu-item"><a href="lifeinriyadh-ar.html" class="text-ar1">الحياة في
@@ -63,8 +63,12 @@
                                 <li class="menu-item"><a href="contact-ar.html" class="text-ar1">تواصل معنا</a></li>
                                 <li class="menu-item menu-item-has-children lang1"><a href="#">اللغه</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt="" class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a></li>
-                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt="" class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a></li>
+                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt=""
+                                                class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a>
+                                        </li>
+                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt=""
+                                                class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
@@ -177,7 +181,7 @@
                                     يُقدم معهد رافلز للطالبات فرصة الحصول على منح دراسية في مختلف تخصصات التصميم المقدمة
                                     في المعهد<br>
                                     يرجى ملاحظة أن المنافسة على المنح الدراسية عادة ما تكون شديدة، لكي تتمكني من الحفاظ
-                                    على المنحة الدراسية الخاصة بكِ، <br>يجب أن تظل درجتك الإجمالية عالية (A)<br>
+                                    على المنحة الدراسية الخاصة بكِ، <br>يجب أن تظل درجتك الإجمالية مرتفعة (A)<br>
                                     نحن لا نتسامح مع الغياب المتكرر بدون أعذار، كما يجب على الطالبات حضور جميع الفصول
                                     الدراسية
                                 </p>
@@ -185,7 +189,7 @@
                                 <h5 class="title6" style="margin-bottom: 25px;">متطلبات المنحة الدراسية</h5>
                                 <p dir="rtl" class="p-about ar-float ar-space">
                                     - الدرجة النهائية الإجمالية ( من 95% إلى 99% )<br><br>
-                                    - الحصول على تقدير عالي (A)<br><br>
+                                    - الحصول على تقدير مرتفع (A)<br><br>
                                     - اجتياز اختبار اللغة الإنجليزية<br><br>
                                     - اجتياز المقابلة شخصية
                                 </p>
@@ -209,19 +213,19 @@
         <section class="subscription-block subscription-block-programs" style="margin-top: -215px;">
             <div>
                 <div class="subscribe-box">
-                        <div class="inner wow fadeIn">
-                            <h2 class="text3-ar">تواصل معنا الآن<br>
-                                ! لنرى كيف يمكننا مساعدتك 
-                            </h2>
-                            <form id="contact" name="contact" action="" method="post">
-                                <input id="phone" type="number" name="phone" size="40" dir="rtl"
-                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false" required
-                                    pattern="[+0-9\s]+" class="ar-font">
+                    <div class="inner wow fadeIn">
+                        <h2 class="text3-ar">تواصل معنا الآن<br>
+                            لنرى كيف يمكننا مساعدتك
+                        </h2>
+                        <form id="contact" name="contact" action="" method="post">
+                            <input id="phone" type="number" name="phone" size="40" dir="rtl"
+                                placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false" required
+                                pattern="[+0-9\s]+" class="ar-font">
 
-                                <input type="submit" id="submit" name="submit" value="سـجـل الآن" class="ar-font">
-                            </form>
-                        </div>
+                            <input type="submit" id="submit" name="submit" value="سـجـل الآن" class="ar-font">
+                        </form>
                     </div>
+                </div>
             </div>
         </section>
 
@@ -244,12 +248,10 @@
                                 <ul id="menu-our-campus"
                                     class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                     style="margin-right: 13%;">
-                                   <li class="menu-item" style="direction: rtl;"><a
-                                                href="mailto:Info@raffles-me.com"
-                                                style="float: right;">Info@raffles-me.com</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a
-                                                href="mailto:Career@raffles-me.com"
-                                                style="float: right;">Career@raffles-me.com</a></li>
+                                    <li class="menu-item" style="direction: rtl;"><a href="mailto:Info@raffles-me.com"
+                                            style="float: right;">Info@raffles-me.com</a></li>
+                                    <li class="menu-item" style="direction: rtl;"><a href="mailto:Career@raffles-me.com"
+                                            style="float: right;">Career@raffles-me.com</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -263,9 +265,9 @@
                                     class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                     style="margin-right: 13%;">
                                     <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
-                                                style="float: right;direction: ltr;">+966 55 011 1719</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
-                                                style="float: right;direction: ltr;">+966 55 299 5509</a></li>
+                                            style="float: right;direction: ltr;">+966 55 011 1719</a></li>
+                                    <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
+                                            style="float: right;direction: ltr;">+966 55 299 5509</a></li>
 
                                 </ul>
                             </div>
@@ -280,11 +282,11 @@
                                 <ul id="menu-academics"
                                     class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                     style="margin-right: 13%;">
-                                     <li class="menu-item" style="direction: rtl;"><a
-                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
-                                                style="float: right;">Office No.25, Home Offices,
-                                                Turki Bin Abdulaziz st 11454
-                                                Riyadh, Saudi Arabia</a></li>
+                                    <li class="menu-item" style="direction: rtl;"><a
+                                            href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
+                                            style="float: right;">Office No.25, Home Offices,
+                                            Turki Bin Abdulaziz st 11454
+                                            Riyadh, Saudi Arabia</a></li>
                                 </ul>
                             </div>
                         </div>
