--- a/jewelery-design-ar.html
+++ b/jewelery-design-ar.html
@@ -477,9 +477,8 @@
                                         style="margin-right: 13%;">
                                        <li class="menu-item" style="direction: rtl;"><a
                                                 href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
-                                                style="float: right;">Office No.25, Home Offices,
-                                                Turki Bin Abdulaziz st 11454
-                                                Riyadh, Saudi Arabia</a></li>
+                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25، البيوت المكتبية، طريق تركي بن
+                                                عبدالعزيز 11454، الرياض،المملكة العربية السعودية.</a></li>
                                     </ul>
                                 </div>
                             </div>
